added font awesome, added map items creation gui

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Angular App</title>
     <meta charset="UTF-8">
 
+    <!-- Font Awesome -->
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
